# denkwerk

./: .gitignore  Cargo.toml  flake.nix  readme.md
demos/flows/: Cargo.toml
demos/flows/src/: main.rs
demos/function-calling/: Cargo.toml
demos/function-calling/src/: main.rs
denkwerk-macros/: Cargo.toml
denkwerk-macros/src/: lib.rs
docs/: tested-models.md
eval/scenarios/: travel_weather.json
examples/: azure_embeddings_example.rs  basic_completion.rs  chat_history.rs  chat_history_llm.rs  concurrent.rs  embeddings_example.rs  function_calling.rs  group_chat.rs  group_chat_custom.rs  handoff.rs  magentic.rs  math_plugin.rs  metrics_demo.rs  ollama_completion.rs  openai_streaming.rs  openrouter_embeddings_example.rs  prompt_from_yaml_demo_simple.rs  provider_comparison_example.rs  sequential.rs  shared_state_agent_functions.rs  shared_state_demo.rs  shared_state_multi_orchestrator.rs
examples/flows/: parallel_support.yaml  sample_flow.yaml
examples/flows/tools/: search.yaml
examples/prompt_from_yaml_demo/: .env.example  flow.yaml  main.rs  readme.md
examples/prompt_from_yaml_demo/prompts/: calculator.md  editor.md  facts.md  researcher.md  responder.md
examples/prompt_from_yaml_demo/tools/: http_uuid.yaml
examples/prompts/: concurrent_chemistry.hbs  concurrent_physics.hbs  front_desk_agent.hbs  group_editor.hbs  group_writer.hbs  magentic_coder.hbs  magentic_researcher.hbs  sequential_analyst.hbs  sequential_editor.hbs  sequential_writer.hbs  travel_agent.hbs
examples/skills_demo/: flow.yaml
examples/skills_demo/prompts/: assistant.md
examples/skills_demo/skills/: uuid_fetcher.md
frontend/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AccessibilityProvider.tsx  CanvasArea.tsx  DefinitionList.tsx  EdgesPanel.tsx  ErrorBoundary.tsx  FlowCanvas.tsx  NodeEditor.tsx  NodeToolbar.tsx  TopBar.tsx  YamlPanel.tsx
frontend/src/hooks/: useFlowManager.ts
frontend/src/services/: apiClient.ts
frontend/src/utils/: flowConfig.ts  flowNodes.ts  yaml.ts
src/: agents.rs  concurrent.rs  error.rs  functions.rs  group_chat.rs  history.rs  lib.rs  magentic.rs  sequential.rs  skills.rs  types.rs
src/bench/: mod.rs
src/eval/: mod.rs  report.rs  runner.rs  scenario.rs
src/flows/: concurrent.rs  dispatch.rs  flow_builder.rs  group_chat.rs  handoffflow.rs  magentic.rs  mod.rs  prefill.rs  sequential.rs  spec.rs
src/functions/: http.rs
src/metrics/: mod.rs
src/plugins/: math.rs
src/providers/: azure_openai.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  scripted.rs
src/shared_state/: mod.rs
tests/: flow_spec_roundtrip.rs  flows_smoke.rs  http_tool_demo.rs  ollama_smoke.rs
tests/fixtures/: openrouter_models_sample.json
