[package]
name = "function-calling-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
denkwerk = { path = "../../" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures-util = "0.3"